deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flick
  labels:
    name: flick
    environment: production
